Updates to the codeclimate.yml

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,7 +1,11 @@
 ---
 engines:
-  duplication:
+  phpcodesniffer:
     enabled: true
+  phpmd:
+    enabled: true
+  duplication:
+    enabled: false
     config:
       languages:
       - ruby
